[package]
name = "crossed_hydro"
version = "0.1.0"
description  = "Analytic hydrogen energy in arbitrary electric and magentic fields"
authors = ["jdrtommey <jake.tommey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
